# lattice

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: COMPETITIVE_ANALYSIS.md  architecture.md  roadmap.md
examples/: benchmark.py  collab_demo.py  competitive_benchmark.py  counter_demo.py  crdt_load_test.py  interactive_demo.py  jit_benchmark.py  jit_calculator.py  realistic_benchmark.py  realtime_dashboard.py  stress_test.py  ui_demo.py
lattice-core/: Cargo.toml  pyproject.toml  test_pycrdt.py
lattice-core/python/lattice/: __init__.py  _core.pyi  collab.py  component.py  diff.py  server.py  tracer.py
lattice-core/src/: lib.rs
lattice-core/src/graph/: mod.rs  node.rs  scheduler.rs
lattice-core/src/jit/: codegen.rs  ir.rs  mod.rs
lattice-core/src/reactive/: context.rs  effect.rs  memo.rs  mod.rs  runtime.rs  signal.rs  subscriber.rs
lattice-core/tests/: integration.rs  test_collab.py  test_components.py  test_jit.py  test_python_api.py  test_stress.py
