[workspace]
resolver = "2"
members = [
    "lattice-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matteo Esposito"]
license = "MIT"
repository = "https://github.com/matteso1/lattice"

[workspace.dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"

# Data structures
indexmap = "2.6"
dashmap = "6.1"
smallvec = "1.13"

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Utilities
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
