[package]
name = "lattice-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core runtime for the Lattice reactive UI framework"

[lib]
name = "lattice_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
tokio.workspace = true
serde.workspace = true
rmp-serde.workspace = true
indexmap.workspace = true
dashmap.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
cranelift.workspace = true
cranelift-module.workspace = true
cranelift-jit.workspace = true
cranelift-native.workspace = true
target-lexicon.workspace = true
serde_json.workspace = true



[dev-dependencies]
criterion = "0.5"
